--- a/src/main/resources/nopointers/GUI2.fxml
+++ b/src/main/resources/nopointers/GUI2.fxml
@@ -25,7 +25,7 @@
                         <Cursor fx:constant="HAND" />
                      </cursor>
                      <effect>
-                        <Bloom threshold="0.08" />
+                        <Bloom threshold="0.11" />
                      </effect></Button>
                   <Button fx:id="l3" layoutX="620.0" layoutY="429.0" maxHeight="62.0" maxWidth="61.0" minHeight="37.0" mnemonicParsing="false" onAction="#handleButtonClick" prefHeight="62.0" prefWidth="61.0" scaleX="1.25" scaleY="1.25" styleClass="circular-button" stylesheets="@../StyleSheets/circlebutton.css">
                      <cursor>
@@ -81,29 +81,41 @@
                      </effect>
                      <font>
                         <Font name="Algerian" size="22.0" />
-                     </font></Button>
+                     </font>
+                     <cursor>
+                        <Cursor fx:constant="HAND" />
+                     </cursor></Button>
                   <Button fx:id="loadButton" layoutX="219.0" layoutY="735.0" mnemonicParsing="false" onAction="#load" prefHeight="41.0" prefWidth="150.0" style="-fx-background-color: orange;" text="Load">
                      <effect>
                         <InnerShadow />
                      </effect>
                      <font>
                         <Font name="Algerian" size="22.0" />
-                     </font></Button>
+                     </font>
+                     <cursor>
+                        <Cursor fx:constant="HAND" />
+                     </cursor></Button>
                   <Button fx:id="shuffle" layoutX="607.0" layoutY="554.0" mnemonicParsing="false" onAction="#shuffle" prefHeight="41.0" prefWidth="87.0" style="-fx-background-color: beige;" styleClass="shuffle-button" stylesheets="@../StyleSheets/Shuffle.css" text="Shuffle">
                      <effect>
                         <InnerShadow />
                      </effect>
                      <font>
                         <Font name="Algerian" size="16.0" />
-                     </font></Button>
+                     </font>
+                     <cursor>
+                        <Cursor fx:constant="HAND" />
+                     </cursor></Button>
                   <Button fx:id="guess" layoutX="774.0" layoutY="492.0" mnemonicParsing="false" onAction="#guess" prefHeight="58.0" prefWidth="62.0" style="-fx-background-color: lime;" text="Guess">
                      <effect>
                         <InnerShadow />
                      </effect>
                      <font>
                         <Font name="Algerian" size="14.0" />
-                     </font></Button>
-                  <TextField fx:id="input" alignment="CENTER" layoutX="493.0" layoutY="89.0" onAction="#guess" promptText="Enter, Guess, Custom">
+                     </font>
+                     <cursor>
+                        <Cursor fx:constant="HAND" />
+                     </cursor></Button>
+                  <TextField fx:id="input" alignment="CENTER" layoutX="493.0" layoutY="89.0" onAction="#guess" promptText="Enter or Guess">
                      <font>
                         <Font size="24.0" />
                      </font>
@@ -129,14 +141,20 @@
                      </effect>
                      <font>
                         <Font name="Algerian" size="24.0" />
-                     </font></Button>
+                     </font>
+                     <cursor>
+                        <Cursor fx:constant="HAND" />
+                     </cursor></Button>
                   <Button fx:id="deleteButton" layoutX="464.0" layoutY="492.0" mnemonicParsing="false" onAction="#delete" prefHeight="58.0" prefWidth="62.0" style="-fx-background-color: crimson;" text="DEL">
                      <effect>
                         <InnerShadow />
                      </effect>
                      <font>
                         <Font name="Algerian" size="17.0" />
-                     </font></Button>
+                     </font>
+                     <cursor>
+                        <Cursor fx:constant="HAND" />
+                     </cursor></Button>
                   <Text fill="#ffe100" layoutX="391.0" layoutY="72.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Word Wizards">
                      <font>
                         <Font name="Algerian" size="75.0" />
@@ -155,6 +173,9 @@
                      <font>
                         <Font name="Algerian" size="24.0" />
                      </font>
+                     <cursor>
+                        <Cursor fx:constant="HAND" />
+                     </cursor>
                   </Button>
                   <Text fill="#ffe100" layoutX="987.0" layoutY="213.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Found Words">
                      <font>
@@ -180,7 +201,7 @@
                         <DropShadow />
                      </effect>
                   </Text>
-                  <Button fx:id="custom" layoutX="42.0" layoutY="607.0" mnemonicParsing="false" onAction="#customPuzzle" prefHeight="41.0" prefWidth="150.0" style="-fx-background-color: orange;" text="Custom">
+                  <Button fx:id="custom" layoutX="42.0" layoutY="607.0" mnemonicParsing="false" onAction="#CustomButton" prefHeight="41.0" prefWidth="150.0" style="-fx-background-color: orange;" text="Custom">
                      <opaqueInsets>
                         <Insets />
                      </opaqueInsets>
@@ -190,6 +211,9 @@
                      <font>
                         <Font name="Algerian" size="24.0" />
                      </font>
+                     <cursor>
+                        <Cursor fx:constant="HAND" />
+                     </cursor>
                   </Button>
                   <TextArea fx:id="help" editable="false" layoutX="10.0" layoutY="251.0" opacity="0.85" prefHeight="340.0" prefWidth="225.0" visible="false" wrapText="true">
                      <effect>
@@ -229,6 +253,28 @@
                      <font>
                         <Font name="Algerian" size="24.0" />
                      </font>
+                     <cursor>
+                        <Cursor fx:constant="HAND" />
+                     </cursor>
+                  </Button>
+                  <TextField fx:id="customInput" layoutX="40.0" layoutY="492.0" onAction="#customPuzzle" prefHeight="44.0" prefWidth="166.0" promptText="Enter Custom Puzzle" visible="false">
+                     <font>
+                        <Font size="16.0" />
+                     </font>
+                  </TextField>
+                  <Button fx:id="customButton" layoutX="219.0" layoutY="492.0" mnemonicParsing="false" onAction="#customPuzzle" prefHeight="41.0" prefWidth="150.0" style="-fx-background-color: orange;" text="Confirm" visible="false">
+                     <opaqueInsets>
+                        <Insets />
+                     </opaqueInsets>
+                     <effect>
+                        <InnerShadow />
+                     </effect>
+                     <font>
+                        <Font name="Algerian" size="24.0" />
+                     </font>
+                     <cursor>
+                        <Cursor fx:constant="HAND" />
+                     </cursor>
                   </Button>
                </children>
             </Pane>
