--- a/src/main/resources/nopointers/GUI2.fxml
+++ b/src/main/resources/nopointers/GUI2.fxml
@@ -284,7 +284,7 @@
                         <Font size="24.0" />
                      </font>
                   </TextArea>
-                  <Button fx:id="hintsButton" layoutX="47.0" layoutY="550.0" mnemonicParsing="false" onAction="#hintsf" prefHeight="41.0" prefWidth="150.0" style="-fx-background-color: orange;" text="Hints">
+                  <Button fx:id="hintsButton" layoutX="42.0" layoutY="550.0" mnemonicParsing="false" onAction="#hintsf" prefHeight="41.0" prefWidth="150.0" style="-fx-background-color: orange;" text="Hints">
                      <opaqueInsets>
                         <Insets />
                      </opaqueInsets>
@@ -293,6 +293,17 @@
                      </effect>
                      <font>
                         <Font name="Algerian" size="24.0" />
+                     </font>
+                  </Button>
+                  <Button fx:id="screensnap" layoutX="219.0" layoutY="550.0" mnemonicParsing="false" onAction="#screensnapf" prefHeight="44.0" prefWidth="150.0" style="-fx-background-color: orange;" text="Screenshot">
+                     <opaqueInsets>
+                        <Insets />
+                     </opaqueInsets>
+                     <effect>
+                        <InnerShadow />
+                     </effect>
+                     <font>
+                        <Font name="Algerian" size="20.0" />
                      </font>
                   </Button>
                </children>
